--- a/index.html
+++ b/index.html
@@ -94,6 +94,68 @@
       body {
         font-family: system-ui, -apple-system, sans-serif;
       }
+
+      /* --- Animation Polyfills for Tailwind CDN --- */
+      
+      /* Base Animation Keyframe similar to tailwindcss-animate */
+      @keyframes enter {
+        from {
+          opacity: var(--tw-enter-opacity, 1);
+          transform: translate3d(var(--tw-enter-translate-x, 0), var(--tw-enter-translate-y, 0), 0) scale3d(var(--tw-enter-scale, 1), var(--tw-enter-scale, 1), 1) rotate(var(--tw-enter-rotate, 0));
+        }
+      }
+
+      /* Utility Classes */
+      .animate-in {
+        animation: enter 0.2s ease-out;
+        --tw-enter-opacity: initial;
+        --tw-enter-scale: initial;
+        --tw-enter-rotate: initial;
+        --tw-enter-translate-x: initial;
+        --tw-enter-translate-y: initial;
+      }
+
+      .fade-in {
+        --tw-enter-opacity: 0;
+      }
+
+      .zoom-in-95 {
+        --tw-enter-scale: 0.95;
+      }
+
+      .slide-in-from-top-2 {
+        --tw-enter-translate-y: -0.5rem;
+      }
+
+      .slide-in-from-bottom-2 {
+        --tw-enter-translate-y: 0.5rem;
+      }
+
+      /* Custom Application Animations */
+      @keyframes slideInRight {
+        from { transform: translateX(100%); }
+        to { transform: translateX(0); }
+      }
+      .animate-slide-in-right {
+        animation: slideInRight 0.3s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+      }
+
+      @keyframes slideInLeft {
+        from { transform: translateX(-100%); }
+        to { transform: translateX(0); }
+      }
+      .animate-slide-in-left {
+        animation: slideInLeft 0.3s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+      }
+
+      @keyframes fadeIn {
+        from { opacity: 0; }
+        to { opacity: 1; }
+      }
+      .animate-fade-in {
+        animation: fadeIn 0.3s ease-out forwards;
+      }
+
     </style>
 <script type="importmap">
 {
