feat: Define CSS variables for Tailwind theming
Introduces CSS variables for color themes in the `index.html` file. This change prepares for more dynamic theming, allowing easier customization of the application's visual appearance by leveraging Tailwind CSS's configuration.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,23 @@
       });
     </script>
     <style>
+      /* Định nghĩa biến CSS cho Tailwind Config */
+      :root {
+        --background: 0 0% 100%;
+        --foreground: 222.2 47.4% 11.2%;
+        --border: 214.3 31.8% 91.4%;
+        --input: 214.3 31.8% 91.4%;
+        --ring: 222.2 47.4% 11.2%;
+      }
+      
+      .dark {
+        --background: 222.2 84% 4.9%;
+        --foreground: 210 40% 98%;
+        --border: 217.2 32.6% 17.5%;
+        --input: 217.2 32.6% 17.5%;
+        --ring: 212.7 26.8% 83.9%;
+      }
+
       /* Đảm bảo ứng dụng full chiều cao màn hình */
       html, body, #root {
         height: 100%;
