feat: Refine Z-index hierarchy and improve component layering
Introduces a comprehensive Z-index hierarchy across the application to ensure proper layering of UI elements. This includes defining z-index values for various components like headers, sidebars, drawers, modals, and table elements.

Updates the DataTable component to correctly apply z-index values for sticky columns and headers, ensuring they layer appropriately over other table content.

Adjusts z-index values for drawers and mobile menus to accommodate the new hierarchy, preventing overlap issues and improving user experience.

Defines CSS variables for Z-index values in Tailwind CSS config and applies them consistently.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
               md: "calc(0.5rem - 2px)",
               sm: "calc(0.5rem - 4px)",
             },
+            zIndex: {
+              'sticky-col': '10',
+              'sticky-header': '20',
+              'header': '30',
+              'sidebar': '40',
+              'drawer': '50',
+              'mobile-menu': '60',
+              'modal': '70',
+              'dropdown': '80',
+              'notification': '90',
+              'widget': '100',
+            }
           },
         },
       }
@@ -70,6 +82,18 @@
         --border: 214.3 31.8% 91.4%;
         --input: 214.3 31.8% 91.4%;
         --ring: 222.2 47.4% 11.2%;
+        
+        /* Z-Index Hierarchy Definitions (Reference) */
+        --z-table-sticky: 10;
+        --z-table-header: 20;
+        --z-app-header: 30;
+        --z-app-sidebar: 40;
+        --z-drawer: 50;
+        --z-mobile-menu: 60;
+        --z-modal: 70;
+        --z-dropdown: 80;
+        --z-notification: 90;
+        --z-widget: 100;
       }
       
       .dark {
