--- a/index.html
+++ b/index.html
@@ -214,19 +214,19 @@
     <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
-    "react-dom": "https://esm.sh/react-dom@^19.2.3",
-    "xlsx": "https://esm.sh/xlsx@^0.18.5",
-    "recharts": "https://esm.sh/recharts@^3.5.1",
-    "date-fns": "https://esm.sh/date-fns@^4.1.0",
-    "lunar-javascript": "https://esm.sh/lunar-javascript@^1.7.7",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.87.1",
-    "react-hook-form": "https://esm.sh/react-hook-form@7.51.0",
-    "@hookform/resolvers/zod": "https://esm.sh/@hookform/resolvers@3.3.4/zod",
+    "react": "https://esm.sh/react@18.3.1",
+    "react-dom": "https://esm.sh/react-dom@18.3.1",
+    "react-dom/": "https://esm.sh/react-dom@18.3.1/",
+    "react/": "https://esm.sh/react@18.3.1/",
+    "lucide-react": "https://esm.sh/lucide-react@0.344.0?external=react",
+    "@google/genai": "https://esm.sh/@google/genai@0.1.1",
+    "xlsx": "https://esm.sh/xlsx@0.18.5",
+    "recharts": "https://esm.sh/recharts@2.12.3?external=react,react-dom",
+    "date-fns": "https://esm.sh/date-fns@3.6.0",
+    "lunar-javascript": "https://esm.sh/lunar-javascript@1.7.7",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.8",
+    "react-hook-form": "https://esm.sh/react-hook-form@7.51.0?external=react,react-dom",
+    "@hookform/resolvers/zod": "https://esm.sh/@hookform/resolvers@3.3.4/zod?external=react,react-dom",
     "zod": "https://esm.sh/zod@3.22.4",
     "@hookform/resolvers/": "https://esm.sh/@hookform/resolvers@^5.2.2/"
   }
