--- a/index.html
+++ b/index.html
@@ -215,8 +215,9 @@
 {
   "imports": {
     "react": "https://esm.sh/react@18.3.1",
-    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client?deps=react@18.3.1",
-    "react-dom": "https://esm.sh/react-dom@18.3.1?deps=react@18.3.1",
+    "react/": "https://esm.sh/react@18.3.1/",
+    "react-dom": "https://esm.sh/react-dom@18.3.1",
+    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
     "lucide-react": "https://esm.sh/lucide-react@0.344.0?deps=react@18.3.1",
     "@google/genai": "https://esm.sh/@google/genai@0.1.1",
     "xlsx": "https://esm.sh/xlsx@0.18.5",
@@ -224,12 +225,7 @@
     "date-fns": "https://esm.sh/date-fns@3.6.0",
     "lunar-javascript": "https://esm.sh/lunar-javascript@1.7.7",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.8",
-    "react-hook-form": "https://esm.sh/react-hook-form@7.51.0?deps=react@18.3.1,react-dom@18.3.1",
-    "@hookform/resolvers/zod": "https://esm.sh/@hookform/resolvers@3.3.4/zod?deps=react@18.3.1,react-hook-form@7.51.0",
-    "zod": "https://esm.sh/zod@3.22.4",
-    "@hookform/resolvers/": "https://esm.sh/@hookform/resolvers@^5.2.2/",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
