--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@
     "date-fns": "https://esm.sh/date-fns@4.1.0",
     "lunar-javascript": "https://esm.sh/lunar-javascript@1.7.7",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.47.10",
+    "clsx": "https://esm.sh/clsx@2.1.0",
+    "tailwind-merge": "https://esm.sh/tailwind-merge@2.2.1",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/"
   }
